--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,22 +1,6 @@
 	<div class="signup">
 	  <div class="signup-container">
 	    <div id="signup-text">Signup for Updates!</div>
-      <!-- <div id="signup-form">
-        <form action="//formspree.io/shelbycokydems@gmail.com" method="POST">
-          <input type="hidden" name="_subject" value="New Update Subscriber!" />
-          <input type="hidden" name="_next" value="//#" />
-          <div class="signup-input">
-            <input type="text" placeholder="NAME" name="name">
-          </div>
-          <div class="signup-input">
-            <input type="email" placeholder="EMAIL" name="email">
-          </div>
-          <input type="text" name="_gotcha" style="display:none" />
-          <div class="signup-input">
-            <button type="submit">SUBSCRIBE</button>
-          </div>
-        </form>
-      </div> -->
 			<div id="signup-form">
 				<div id="mc_embed_signup">
 					<form action="//shelbycokydems.us13.list-manage.com/subscribe/post?u=d253237f5f7fe430614952a44&amp;id=9205faa7b0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -31,7 +15,7 @@
 							</div>
 
 							<div class="clear signup-input">
-								<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button">
+								<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button box-highlight">
 							</div>
 
 							<div id="mce-responses" class="clear">
