--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -9,7 +9,7 @@ $bg-color: #FFF
 $link-color: $primary-blue
 $selection-color: #FFF498
 
-$donate-red: #e31818
+$highlight-red: #e31818
 
 /** Social Media Color **/
 
