--- a/assets/css/2-modules/forms.sass
+++ b/assets/css/2-modules/forms.sass
@@ -23,12 +23,12 @@
 
 .empty-focus
     outline: none
-    border: 1px solid $donate-red
-    box-shadow: 0 0 5px $donate-red
-    +input-placeholder($donate-red)
+    border: 1px solid $highlight-red
+    box-shadow: 0 0 5px $highlight-red
+    +input-placeholder($highlight-red)
 
 .required-asterisk
-  color: $donate-red
+  color: $highlight-red
 
 .form-paran
   font-size: 15px
@@ -38,11 +38,4 @@
   padding-left: 20px
 
 .form-submit
-  border: 2px solid $donate-red
-  background-color: #fff
-  color: $donate-red
-  transition: background-color .5s
-
-  &:hover
-    background-color: $donate-red
-    color: #fff
+  font-size: .9em
