--- a/assets/css/3-layouts/home.sass
+++ b/assets/css/3-layouts/home.sass
@@ -76,17 +76,8 @@
 .posts
   padding: 0
 
-#read-more
-  border: 2px solid $donate-red
-  color: $donate-red
-  background-color: #fff
-  font-size: 16px
+.read-more
   padding: 10px 15px
-  transition: background-color .15s, color .15s
-
-  &:hover
-    background-color: $donate-red
-    color: #fff
 
 .social-container
   +media($screen)
