--- a/assets/css/3-layouts/special.sass
+++ b/assets/css/3-layouts/special.sass
@@ -7,7 +7,7 @@
     transition: color .15s, underline .15s
 
     &:hover
-      color: lighten($donate-red, 15%)
+      color: lighten($highlight-red, 15%)
       text-decoration: underline
 
 .special-hero
