--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 					<li><a href="/executive.html">Executive Committee</a></li>
 					<li><a href="/officials.html">Elected Officials</a></li>
           <!-- <li><a href="#">Young Democrats</a></li>-->
-					<li><a href="/candidates.html">Candidates</a></li>
+					<!-- <li><a href="/candidates.html">Candidates</a></li> -->
 					<li><a href="/links.html">Links</a></li>
 				</ul>
 			</li>
@@ -26,7 +26,7 @@
 
         </ul>
       </li>
-<!--			<li class="nav-link"><a href="#" id="donate">Donate</a></li>-->
+<!--			<li class="nav-link"><a href="#" class="box-highlight">Donate</a></li>-->
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/assets/js/navbarToggle.js"></script>
