--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-*,
-*:before,
-*:after {
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit; }
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
@@ -179,7 +179,8 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0; }
 
 /**
@@ -246,7 +247,8 @@ select {
  *    `input` and others.
  */
 button,
-html input[type="button"], input[type="reset"],
+html input[type="button"],
+input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   /* 2 */
@@ -284,7 +286,8 @@ input {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -306,6 +309,7 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -558,8 +562,8 @@ ul li.nav-link {
 #donate {
   color: #e31818;
   border: 2px solid #e31818;
-  -webkit-transition: background-color 0.15s, color 0.15s;
-          transition: background-color 0.15s, color 0.15s; }
+  -webkit-transition: background-color .15s, color .15s;
+  transition: background-color .15s, color .15s; }
   #donate:hover {
     background-color: #e31818;
     color: white; }
@@ -607,8 +611,8 @@ ul li.nav-link {
     color: #e31818;
     border: 2px solid #e31818;
     background-color: #fff;
-    -webkit-transition: background-color 0.15s, color 0.15s;
-            transition: background-color 0.15s, color 0.15s; }
+    -webkit-transition: background-color .15s, color .15s;
+    transition: background-color .15s, color .15s; }
     #signup-form button:hover {
       background-color: #e31818;
       color: #fff; }
@@ -623,8 +627,8 @@ ul li.nav-link {
     color: #e31818;
     border: 2px solid #e31818;
     background-color: #fff;
-    -webkit-transition: background-color 0.15s, color 0.15s;
-            transition: background-color 0.15s, color 0.15s; }
+    -webkit-transition: background-color .15s, color .15s;
+    transition: background-color .15s, color .15s; }
     .signup-input input[type=submit]:hover {
       background-color: #e31818;
       color: #fff; }
@@ -670,7 +674,8 @@ ul li.nav-link {
 .empty-focus {
   outline: none;
   border: 1px solid #e31818;
-  box-shadow: 0 0 5px #e31818; }
+  -webkit-box-shadow: 0 0 5px #e31818;
+          box-shadow: 0 0 5px #e31818; }
   .empty-focus::-webkit-input-placeholder {
     color: #e31818; }
   .empty-focus:-moz-placeholder {
@@ -694,8 +699,8 @@ ul li.nav-link {
   border: 2px solid #e31818;
   background-color: #fff;
   color: #e31818;
-  -webkit-transition: background-color 0.5s;
-          transition: background-color 0.5s; }
+  -webkit-transition: background-color .5s;
+  transition: background-color .5s; }
   .form-submit:hover {
     background-color: #e31818;
     color: #fff; }
@@ -922,8 +927,8 @@ footer {
   background-color: #fff;
   font-size: 16px;
   padding: 10px 15px;
-  -webkit-transition: background-color 0.15s, color 0.15s;
-          transition: background-color 0.15s, color 0.15s; }
+  -webkit-transition: background-color .15s, color .15s;
+  transition: background-color .15s, color .15s; }
   #read-more:hover {
     background-color: #e31818;
     color: #fff; }
@@ -1277,14 +1282,15 @@ footer {
   font-size: 22px; }
   #special a {
     color: #fff;
-    -webkit-transition: color 0.15s, underline 0.15s;
-            transition: color 0.15s, underline 0.15s; }
+    -webkit-transition: color .15s, underline .15s;
+    transition: color .15s, underline .15s; }
     #special a:hover {
       color: #ee5a5a;
       text-decoration: underline; }
 
 .special-hero {
   background-image: -webkit-linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/clearcreek.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(15, 36, 70, 0.65)), to(rgba(15, 36, 70, 0.65))), url(/assets/img/clearcreek.jpg);
   background-image: linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/clearcreek.jpg);
   background-position: 0 25%;
   background-repeat: no-repeat;
