Working on switching CSS to BEM style, small post changes, added collins dinner

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,18 @@
 <footer>
-	<div class="container">
+	<div class="footer__container">
 
-		<div class="footer-column" id="footer-contact">
+		<div class="footer__column footer__column--contact">
 				<h2>Contact Us</h2>
 				<p>P.O. Box 1266 <br> Shelbyville, KY 40066</p>
 				<p><a href="mailto:shelbycokydems@gmail.com">shelbycokydems@gmail.com</a></p>
 		</div>
 
-		<div class="footer-column" id="footer-middle">
-			<img src="/assets/img/shelbylogo-circle.png" id="footer-logo"><br>
-			<div id="paidfor">Paid for by the Shelby County Democratic Party</div>
+		<div class="footer__column footer__column--middle">
+			<a href="/index.html"><img class="footer__logo" src="/assets/img/shelbylogo-circle.png"></a><br>
+			<div class="footer__paidfor">Paid for by the Shelby County Democratic Party</div>
 		</div>
 
-		<div class="footer-column" id="footer-social">
+		<div class="footer__column footer__column--social">
 			<div><a href="https://twitter.com/shelbydemky">
 				<span class="fa-stack fa-3x">
 					<i class="fa fa-circle fa-stack-2x twittercircle"></i>
@@ -28,5 +28,4 @@
 		</div>
 
 	</div>
-
 </footer>
