--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header role="banner">
 	<div class="logo">
-	  <div class="img-container"></div>
-		<a href="/index.html"><img src="/assets/img/shelbylogo.png" class="logoimg"></a>
-		<h1 id="partyname"><a href="/index.html">Shelby County Democratic Party</a></h1>
+		<a href="/index.html">
+			<img class="logo__img" src="/assets/img/shelbylogo.png">
+			<div class="logo__name">Shelby County Democratic Party</div>
+		</a>
     <a href="#" id="mobile-menu-button"><i class='fa fa-2x fa-bars'></i></a>
 	</div>
 	<nav id="navbar">
@@ -26,7 +27,7 @@
 
         </ul>
       </li>
-<!--			<li class="nav-link"><a href="#" class="box-highlight">Donate</a></li>-->
+			<li class="nav-link nav-link--donate"><a href="https://secure.actblue.com/contribute/page/shelbycountydonate" class="box-highlight">Donate</a></li>
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/assets/js/navbarToggle.js"></script>
