--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,20 +1,20 @@
 	<div class="signup">
-	  <div class="signup-container">
-	    <div id="signup-text">Signup for Updates!</div>
-			<div id="signup-form">
+	  <div class="signup__container">
+	    <div class="signup__text">Signup for Updates!</div>
+			<div class="signup__form">
 				<div id="mc_embed_signup">
 					<form action="//shelbycokydems.us13.list-manage.com/subscribe/post?u=d253237f5f7fe430614952a44&amp;id=9205faa7b0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 						<div id="mc_embed_signup_scroll">
 
-							<div class="mc-field-group signup-input">
+							<div class="mc-field-group signup__input">
 								<input type="text" value="" name="NAME" placeholder="NAME" class="" id="mce-NAME">
 							</div>
 
-							<div class="mc-field-group signup-input">
+							<div class="mc-field-group signup__input">
 								<input type="email" value="" name="EMAIL" placeholder="EMAIL" class="required email" id="mce-EMAIL">
 							</div>
 
-							<div class="clear signup-input">
+							<div class="clear signup__input">
 								<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button box-highlight">
 							</div>
 
