--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -2,7 +2,6 @@ $primary-blue: #00aef3
 
 $secondary-blue: #0f2446
 
-$primary-color: #F6C
 $text-color: $secondary-blue
 $accent-color: #BD5248
 $bg-color: #FFF
@@ -19,5 +18,5 @@ $facebook-blue: #3B5998
 /** Breakpoints **/
 
 $mobile: new-breakpoint(max-width 600px 4)
-$tablet: new-breakpoint(max-width 1230px 8)
+$tablet: new-breakpoint(min-width 601px max-width 1230px 8)
 $screen: new-breakpoint(min-width 1231px)
