--- a/assets/css/3-layouts/special.sass
+++ b/assets/css/3-layouts/special.sass
@@ -1,7 +1,7 @@
 #special
   text-align: center
   background-color: $secondary-blue
-  font-size: 22px
+  font-size: 1.25em
   a
     color: #fff
     transition: color .15s, underline .15s
@@ -11,20 +11,21 @@
       text-decoration: underline
 
 .special-hero
-  +background-image(linear-gradient(rgba($secondary-blue, 0.65), rgba($secondary-blue, 0.65)), url(/assets/img/clearcreek.jpg))
+  +background-image(linear-gradient(rgba($secondary-blue, 0.65), rgba($secondary-blue, 0.65)), url(/assets/img/c-sanders.jpg))
   background-position: 0 25%
   background-repeat: no-repeat
   background-size: cover
   padding-bottom: 3em
 
-.special-tint
+.heroimage__text--special
   color: #fff
   padding-top: 1em
 
-  #special-title
+  .special__title
     font-size: 1em
+    font-family: Montserrat
 
-  #special-details
+  .special__details
     font-size: 0.5em
 
 .special-container
