--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -3,6 +3,7 @@
 h1, h2, h3, h4, h5, h6
   color: $accent-color
   font-weight: bold
+  font-family: Montserrat
 
 h1
   font-size: 2em
@@ -24,6 +25,7 @@ h4
 
 p
   margin: 0 0 20px 0
+  font-family: Lato
 
 em
   font-style: italic
