--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -3,16 +3,14 @@ footer
   overflow: auto
   padding-bottom: 30px
 
-.container
+.footer__container
+  +outer-container
   padding: 30px 0
-
-  +media($tablet)
-    +outer-container
 
   +media($screen)
     +outer-container(90%)
 
-.footer-column
+.footer__column
   +media($screen)
     +span-columns(4)
 
@@ -22,37 +20,39 @@ footer
 
   +media($mobile)
     +span-columns(4)
+    text-align: center
 
   h3
     margin: 0
     padding-bottom: 20px
 
-#footer-contact
-  p
+.footer__column--contact
+  p, a
     color: #fff
+    font-weight: bold
 
-  a
-    color: #fff
+  a:hover
+    text-decoration: underline
 
-    &:hover
-      text-decoration: underline
-
-#footer-middle
+.footer__column--middle
   text-align: center
 
-#footer-logo
+.footer__logo
   width: 75px
   margin-bottom: 5px
 
-#paidfor
+.footer__paidfor
   border: 2px solid #fff
   padding: 5px
   color: #fff
 
   +media($tablet)
-    margin: 0 3em
+    margin: 0 25%
 
-#footer-social
+  +media($mobile)
+    margin: 0 25%
+
+.footer__column--social
   text-align: center
 
   div
