--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 html {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
+  -webkit-box-sizing: inherit;
   box-sizing: inherit; }
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
@@ -177,7 +179,8 @@ figure {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   height: 0; }
 
 /**
@@ -283,7 +286,8 @@ input {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -305,6 +309,7 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -454,7 +459,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   -webkit-transition: background-color .7s ease, color .7s ease;
-          transition: background-color .7s ease, color .7s ease; }
+  transition: background-color .7s ease, color .7s ease; }
   .box-highlight:hover {
     background-color: #e31818;
     color: white; }
@@ -668,7 +673,8 @@ header {
 .empty-focus {
   outline: none;
   border: 1px solid #e31818;
-  box-shadow: 0 0 5px #e31818; }
+  -webkit-box-shadow: 0 0 5px #e31818;
+          box-shadow: 0 0 5px #e31818; }
   .empty-focus::-webkit-input-placeholder {
     color: #e31818; }
   .empty-focus:-moz-placeholder {
@@ -1218,20 +1224,15 @@ footer {
   #special a {
     color: #fff;
     -webkit-transition: color .15s, underline .15s;
-            transition: color .15s, underline .15s; }
+    transition: color .15s, underline .15s; }
     #special a:hover {
       color: #ee5a5a;
       text-decoration: underline; }
 
 .special-hero {
-<<<<<<< HEAD
   background-image: -webkit-linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/c-sanders.jpg);
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(15, 36, 70, 0.65)), to(rgba(15, 36, 70, 0.65))), url(/assets/img/c-sanders.jpg);
   background-image: linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/c-sanders.jpg);
-=======
-  background-image: -webkit-linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/clearcreek.jpg);
-  background-image: linear-gradient(rgba(15, 36, 70, 0.65), rgba(15, 36, 70, 0.65)), url(/assets/img/clearcreek.jpg);
->>>>>>> origin/master
   background-position: 0 25%;
   background-repeat: no-repeat;
   background-size: cover;
