Quick add for donate error -- will be removed soon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,8 @@
 
         </ul>
       </li>
-			<li class="nav-link nav-link--donate"><a href="https://secure.actblue.com/contribute/page/shelbycountydonate" class="box-highlight">Donate</a></li>
+			<li class="nav-link nav-link--donate"><a href="/donate.html" class="box-highlight">Donate</a></li>
+			<!-- <li class="nav-link nav-link--donate"><a href="https://secure.actblue.com/contribute/page/shelbycountydonate" class="box-highlight">Donate</a></li> -->
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/assets/js/navbarToggle.js"></script>
