--- a/assets/css/3-layouts/special.sass
+++ b/assets/css/3-layouts/special.sass
@@ -4,11 +4,11 @@
   font-size: 1.25em
   a
     color: #fff
-    transition: color .15s, underline .15s
+    text-decoration: underline
+    transition: color .15s
 
     &:hover
       color: lighten($highlight-red, 15%)
-      text-decoration: underline
 
 .special-hero
   +background-image(linear-gradient(rgba($secondary-blue, 0.65), rgba($secondary-blue, 0.65)), url(/assets/img/c-sanders.jpg))
@@ -27,6 +27,14 @@
 
   .special__details
     font-size: 0.5em
+
+    a
+      text-decoration: underline
+      color: #fff
+      transition: color .15s
+
+      &:hover
+        color: lighten($highlight-red, 15%)
 
 .special-container
   text-align: center
