--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 					<li><a href="/executive.html">Executive Committee</a></li>
 					<li><a href="/officials.html">Elected Officials</a></li>
           <!-- <li><a href="#">Young Democrats</a></li>-->
-					<!-- <li><a href="/candidates.html">Candidates</a></li> -->
+					<li><a href="/candidates.html">Candidates</a></li>
 					<li><a href="/links.html">Links</a></li>
 				</ul>
 			</li>
