--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -786,6 +786,9 @@ footer {
 .facebookcircle {
   color: #3B5998; }
 
+.webcircle {
+  color: #27ae60; }
+
 .content-container {
   max-width: 90%;
   margin-left: auto;
