--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header role="banner">
 	<div class="logo">
 		<a href="/index.html">
-			<img class="logo__img" src="/assets/img/shelbylogo.png">
+			<img class="logo__img" src="/assets/img/shelbylogo.png" alt="Shelby County Democratic Party">
 			<div class="logo__name">Shelby County Democratic Party</div>
 		</a>
     <a href="#" id="mobile-menu-button"><i class='fa fa-2x fa-bars'></i></a>
