--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 		</div>
 
 		<div class="footer__column footer__column--middle">
-			<a href="/index.html"><img class="footer__logo" src="/assets/img/shelbylogo-circle.png"></a><br>
+			<a href="/index.html"><img class="footer__logo" src="/assets/img/shelbylogo-circle.png" alt="Shelby County Democratic Party Logo"></a><br>
 			<div class="footer__paidfor">Paid for by the Shelby County Democratic Party</div>
 		</div>
 
