undo small changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 		<ul id="nav-menu" class="nav-menu show">
 			<li class="nav-link"><a href="/index.html">Home</a></li>
 			<li class="nav-link more"><a href="#">About&nbsp;<i class="fa fa-caret-down"></i></a>
-				<ul class="sub-menu">
+				<ul id="sub-menu">
 					<li><a href="/executive.html">Executive Committee</a></li>
 					<li><a href="/officials.html">Elected Officials</a></li>
           <!-- <li><a href="#">Young Democrats</a></li>-->
@@ -20,7 +20,7 @@
 			</li>
 			<li class="nav-link"><a href="/calendar.html">Calendar</a></li>
 			<li class="nav-link more"><a href="#">Get Involved!&nbsp;<i class="fa fa-caret-down"></i></a>
-        <ul class="sub-menu">
+        <ul id="sub-menu">
           <li><a href="/volunteer.html">Volunteer</a></li>
           <li><a href="/contact.html">Contact Us</a></li>
           <li><a href="http://elect.ky.gov/registertovote/Pages/default.aspx">Register to Vote</a></li>
