updated exec committee and other changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,21 +13,18 @@
 				<ul id="sub-menu">
 					<li><a href="/executive.html">Executive Committee</a></li>
 					<li><a href="/officials.html">Elected Officials</a></li>
-          <!-- <li><a href="#">Young Democrats</a></li>-->
-					<li><a href="/candidates.html">Candidates</a></li>
+					<!-- <li><a href="/candidates.html">Candidates</a></li> -->
 					<li><a href="/links.html">Links</a></li>
 				</ul>
 			</li>
-			<li class="nav-link"><a href="/calendar.html">Calendar</a></li>
+			<!-- <li class="nav-link"><a href="/calendar.html">Calendar</a></li> -->
 			<li class="nav-link more"><a href="#">Get Involved!&nbsp;<i class="fa fa-caret-down"></i></a>
         <ul id="sub-menu">
           <li><a href="/volunteer.html">Volunteer</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
-          <li><a href="http://elect.ky.gov/registertovote/Pages/default.aspx">Register to Vote</a></li>
-
+          <li><a href="https://vrsws.sos.ky.gov/ovrweb/" target="_blank" rel="noopener noreferrer">Register to Vote</a></li>
         </ul>
       </li>
-			<li class="nav-link nav-link--donate"><a href="https://secure.actblue.com/contribute/page/shelbycountydonate" class="box-highlight">Donate</a></li>
+			<li class="nav-link nav-link--donate"><a href="https://secure.actblue.com/contribute/page/shelbycountydonate" target="_blank" rel="noopener noreferrer" class="box-highlight">Donate</a></li>
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/assets/js/navbarToggle.js"></script>
