--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -445,7 +445,8 @@ body {
   -webkit-text-size-adjust: 100%; }
 
 .body {
-  clear: both; }
+  clear: both;
+  margin-bottom: 30px; }
 
 .box-highlight {
   color: #e31818;
@@ -578,6 +579,9 @@ header {
 
 .nav-link--donate {
   padding: 0 10px 10px; }
+  @media screen and (max-width: 600px) {
+    .nav-link--donate {
+      text-align: center; } }
 
 .signup {
   background-color: #0f2446;
@@ -693,8 +697,7 @@ header {
 
 footer {
   background-color: #0f2446;
-  overflow: auto;
-  padding-bottom: 30px; }
+  overflow: auto; }
 
 .footer__container {
   max-width: 85.625em;
